Actualizar .DS_Store, .classpath y 82 más archivos...